# kinesin

./: Cargo.toml  README.md  TODO.md  flake.nix  package.nix
src/: buffd.rs  bus.rs  cli.rs  conf.rs  consumer.rs  events.rs  exec.rs  exec_args.rs  logging.rs  main.rs  registry.rs  runner.rs  service.rs  service_def.rs  service_registry.rs  services.rs  stdio.rs  supervisor.rs  utils.rs
src/aio_driver/: epoll.rs  interface.rs  io_uring.rs  kqueue.rs  mod.rs
src/supervisor/: epoll.rs  interface.rs  io_uring.rs  kqueue.rs  mod.rs  notification.rs
src/watcher/: epoll.rs  interface.rs  io_uring.rs  kqueue.rs  mod.rs
