[package]
name = "rs-init"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
nix = { version = "0.29.0", features = ["event", "fs", "process", "signal", "zerocopy"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_toml = "0.0.1"
serde_yaml = "0.9.34"
toml = "0.8.20"
which = "7.0.2"

